# distributed-softbus

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
docs/: API参考.md  FAQ.md  GitHub_Token_问题解决.md  README.md  实施指南.md  开发工作流.md  文档导航.md  架构设计.md  设计概述.md  部署指南.md  项目结构.md
examples/camera-service/: Cargo.toml  camera_service.idl
examples/camera-service/src/: client.rs  server.rs
examples/file-transfer/: Cargo.toml
examples/file-transfer/src/: main.rs
examples/remote-control/: Cargo.toml
examples/remote-control/src/: main.rs
native/android/: build.gradle
native/android/src/com/softbus/: NativeAdapter.java
native/linux/: CMakeLists.txt  build.sh
native/linux/include/: ble_adapter.h  wifi_direct.h
native/linux/src/: ble_adapter.cpp  wifi_direct.cpp
native/windows/: BleAdapter.cs  SoftBus.Native.csproj  WiFiDirectAdapter.cs  build.ps1
scripts/: build-all.sh  install-deps.sh  run-tests.sh  upload_to_github.py
softbus-core/: Cargo.toml  build.rs
softbus-core/proto/: rpc.proto  service.proto
softbus-core/src/: channel.rs  error.rs  lib.rs  types.rs
softbus-core/src/arbiter/: mod.rs  transport.rs
softbus-core/src/connection/: manager.rs  mod.rs  pool.rs
softbus-core/src/rpc/: client.rs  mod.rs  server.rs
softbus-core/src/security/: auth.rs  crypto.rs  mod.rs
softbus-core/src/service/: mod.rs  registry.rs  router.rs
softbus-core/tests/: integration_test.rs
softbus-idl-compiler/: Cargo.toml
softbus-idl-compiler/src/: main.rs
softbus-idl-compiler/src/codegen/: cpp.rs  csharp.rs  mod.rs  rust.rs
softbus-idl-compiler/src/parser/: ast.rs  lexer.rs  mod.rs
softbus-idl-compiler/tests/: codegen_test.rs
softbus-network/: Cargo.toml
softbus-network/src/: adapter.rs  lib.rs
softbus-network/src/ble/: adapter.rs  channel.rs  mod.rs
softbus-network/src/mdns/: adapter.rs  mod.rs
softbus-network/src/wifi/: adapter.rs  channel.rs  ffi.rs  mod.rs
softbus-network/tests/: ble_test.rs
