[package]
name = "file-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
softbus-core = { path = "../../softbus-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bytes.workspace = true
